--- a/feilds.html
+++ b/feilds.html
@@ -141,7 +141,7 @@
         </div>
       </a>
       <a href="./quiz1.html">
-        <div class="sub"><img class=" icon" src="./images/Python.jpg" alt="11">
+        <div class="sub"><img class=" icon" src="./images/python.jpg" alt="11">
           <div class="name">
             Python
           </div>
